# blobo_party

./: .gitignore  Cargo.toml  README.md  build.sh  clippy.toml  rustfmt.toml
.github/workflows/: release.yaml
assets/config/: actor.ron  audio.ron  camera.ron  card.ron  deck_dock.ron  health_bar.ron  level.ron  music.ron  projectile.ron  spawner.ron  spotlight.ron  step.ron  theme.ron  wave.ron  window.ron
assets/image/: dance_party.aseprite  linus.aseprite  lucy.aseprite
assets/image/actor/: blue.aseprite  green.aseprite  pink.aseprite  purple.aseprite  red.aseprite  yellow.aseprite
assets/image/card/: blue_card.aseprite  counter_point.aseprite  double_beat.aseprite  green_card.aseprite  magenta_card.aseprite  pink_card.aseprite  splits.aseprite  step.aseprite  yellow_card.aseprite
assets/image/card/background/: backgrounds.aseprite
assets/image/card/icon/: icons.aseprite
assets/image/projectile/: projectiles.aseprite  quarter_note.aseprite
assets/image/ui/: arrow.aseprite  mini_arrow.aseprite  simple_border.aseprite
assets/image/vfx/: bubble.aseprite  horizontal_smoke.aseprite  spotlight.aseprite  spotlight_lamp.aseprite  vertical_smoke.aseprite
assets/mockup/: blobo.aseprite  cards.aseprite  cover_art.aseprite  dance_party.aseprite  ingame.aseprite  levelup.aseprite  pyrious.aseprite
assets/shaders/: ground.wgsl
src/: animation.rs  core.rs  game.rs  lib.rs  screen.rs  ui.rs  util.rs
src/animation/: backup.rs  offset.rs  transition.rs
src/core/: asset.rs  audio.rs  camera.rs  debug.rs  pause.rs  physics.rs  state.rs  theme.rs  window.rs
src/game/: actor.rs  audio.rs  card.rs  cleanup.rs  combat.rs  deck.rs  deck_dock.rs  ground.rs  level.rs  music.rs  projectile.rs  spotlight.rs  sprite.rs  stats.rs  step.rs  wave.rs
src/game/actor/: attack.rs  enemy.rs  facing.rs  faction.rs  health.rs  level.rs  movement.rs  player.rs  shield.rs  spawner.rs
src/game/actor/attack/: input.rs
src/game/actor/level/: up.rs  xp.rs
src/game/actor/movement/: input.rs  smoke.rs
src/game/audio/: music.rs
src/game/card/: action.rs  attack.rs  deck.rs  deck_dock.rs  movement.rs  remove.rs
src/game/combat/: collision.rs  damage.rs  death.rs  hit.rs  knockback.rs  projectile.rs
src/game/level/: up.rs  xp.rs
src/game/music/: beat.rs
src/screen/: end.rs  intro.rs  loading.rs  playing.rs  splash.rs  title.rs
src/screen/playing/: defeat_menu.rs  hud.rs  level_up_menu.rs  pause_menu.rs  victory_menu.rs
src/ui/: div.rs  font.rs  interaction.rs  selection.rs  tooltip.rs  widget.rs
src/util/: config.rs  despawn.rs  late_despawn.rs  macros.rs  patch.rs  selection.rs  texture_atlas_grid.rs  time.rs
web/: index.html  style.css
